k8s/apps/slop-detector/base/oauth2-envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: slop-detector-oauth2
  namespace: default
spec:
  workloadSelector:
    labels:
      app: slop-detector
  configPatches:
  # Add OAuth2 filter to the HTTP connection manager
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 3000
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.oauth2
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
          config:
            token_endpoint:
              cluster: oauth2_cluster
              uri: https://login.microsoftonline.com/{tenant-id}/oauth2/v2.0/token
              timeout: 5s
            authorization_endpoint: https://login.microsoftonline.com/{tenant-id}/oauth2/v2.0/authorize
            redirect_uri: https://slop.cat-herding.net/oauth2/callback
            redirect_path_matcher:
              path:
                exact: /oauth2/callback
            signout_path:
              path:
                exact: /oauth2/signout
            forward_bearer_token: true
            credentials:
              client_id: "{client-id}"
              token_secret:
                name: slop-detector-oauth-token
                sds_config:
                  path: /etc/istio/oauth2/slop-detector-oauth-token.yaml
                  resource_api_version: V3
              hmac_secret:
                name: slop-detector-oauth-hmac
                sds_config:
                  path: /etc/istio/oauth2/slop-detector-oauth-hmac.yaml
                  resource_api_version: V3
            auth_scopes:
            - openid
            - profile
            - email
  # Add cluster for OAuth2 token endpoint
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
    patch:
      operation: ADD
      value:
        name: oauth2_cluster
        type: LOGICAL_DNS
        connect_timeout: 5s
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: oauth2_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: login.microsoftonline.com
                    port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: login.microsoftonline.com
